--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
     <h1 class="main-header"> "Hi My name is Adel I'am A professional Pastry Chef" </h1>
     <p class="about-me">Professional, experienced and detailed-oriented chef. Specialized in planning menus, developing recipes, food preparation, and safety </p>
 </div>
-
+<hr>
+<!-- second-section-->
+<div class="second-sec">
+    <div class="second-sec-para">Taste My Amazing Desserts</div>
+    <img class="cake-pic" src="./img/cakes-sec-section.jpg" alt="cakes-picture">
+</div>
     </main>
 
     
