upload website boxes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PASTRY CHEF ADEL LAMLOUM</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
 <div class="img-main"><img class="img-main2" src="./img/IMG20230913112416.jpg" alt=""></div>
 <div class="hi-me">
     <h1 class="main-header"> "Hi My name is Adel I'am A professional Pastry Chef" </h1>
-    <p class="about-me">Professional, experienced and detailed-oriented chef. Specialized in planning menus, developing recipes, food preparation, and safety </p>
+    <p class="about-me">Professional, experienced and detailed-oriented chef. Specialized in planning menus, developing recipes, food preparation, and safety .</p>
 </div>
 <hr>
 <!-- second-section-->
@@ -39,6 +40,28 @@
     <img class="cake-pic" src="./img/cakes-sec-section.jpg" alt="cakes-picture">
 </div>
     </main>
+    <!--boxes sction-start-->
+    <div class="boxes">
+<div class="box1">
+        <img src="./img/box1.jpg" alt="" class="box-img">
+
+    <h3>Lorem ipsum dolor sit amet.</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, dolorum.</p>
+</div>
+<div class="box2">
+        <img src="./img/box2.jpg" alt="" class="box-img">
+    <h3>Lorem ipsum dolor sit amet.</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, vitae?</p>
+</div>
+
+<div class="box3">
+    <img src="./img/box3.jpg" alt="" class="box-img">
+<h3>Lorem ipsum dolor sit amet.</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora, eum.</p>
+</div>
+
+
+    </div>
 
     
 </body>
