--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
     </main>
     <!--boxes sction-start-->
     <div class="boxes">
-<div class="box1">
+<div class="box">
         <img src="./img/box1.jpg" alt="" class="box-img">
 
     <h3>Lorem ipsum dolor sit amet.</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, dolorum.</p>
 </div>
-<div class="box2">
+<div class="box">
         <img src="./img/box2.jpg" alt="" class="box-img">
     <h3>Lorem ipsum dolor sit amet.</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, vitae?</p>
 </div>
 
-<div class="box3">
+<div class="box">
     <img src="./img/box3.jpg" alt="" class="box-img">
 <h3>Lorem ipsum dolor sit amet.</h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora, eum.</p>
