--- a/index.html
+++ b/index.html
@@ -1,68 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PASTRY CHEF ADEL LAMLOUM</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-</head>
-<body>
-   <!--  navbar-->
-<div class="container">
-    <div class="chef-logo"><img src="./img/OE612P0.jpg" alt=""> </div>
-    <div class="nav">
-<img class="burger-menu" src="./img/R.fa71bfb55a6d9dfe281a623377b74a56" alt="">
-<ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
-    <li><a href="#">Gallery</a></li>
-</ul>
-</div>
-</div>
-<br>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!--  navbar-->
+    <div class="container">
+      <div class="chef-logo"><img src="./img/OE612P0.jpg" alt="" /></div>
+      <div class="nav">
+        <img
+          class="burger-menu"
+          src="./img/R.fa71bfb55a6d9dfe281a623377b74a56"
+          alt=""
+        />
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Gallery</a></li>
+        </ul>
+      </div>
+    </div>
+    <br />
     <!-- Navbar end-->
     <!-- main section start-->
     <main>
-<div class="img-main"><img class="img-main2" src="./img/IMG20230913112416.jpg" alt=""></div>
-<div class="hi-me">
-    <h1 class="main-header"> "Hi My name is Adel I'am A professional Pastry Chef" </h1>
-    <p class="about-me">Professional, experienced and detailed-oriented chef. Specialized in planning menus, developing recipes, food preparation, and safety .</p>
-</div>
-<hr>
-<!-- second-section-->
-<div class="second-sec">
-    <div class="second-sec-para">Taste My Amazing Desserts</div>
-    <img class="cake-pic" src="./img/cakes-sec-section.jpg" alt="cakes-picture">
-</div>
+      <div class="img-main">
+        <img class="img-main2" src="./img/IMG20230913112416.jpg" alt="" />
+      </div>
+      <div class="hi-me">
+        <h1 class="main-header">
+          "Hi My name is Adel I'am A professional Pastry Chef"
+        </h1>
+        <p class="about-me">
+          Professional, experienced and detailed-oriented chef. Specialized in
+          planning menus, developing recipes, food preparation, and safety .
+        </p>
+      </div>
+      <hr />
+      <!-- second-section-->
+      <div class="second-sec">
+        <div class="second-sec-para">Taste My Amazing Desserts</div>
+        <img
+          class="cake-pic"
+          src="./img/cakes-sec-section.jpg"
+          alt="cakes-picture"
+        />
+      </div>
     </main>
     <!--boxes sction-start-->
     <div class="boxes">
-<div class="box">
-        <img src="./img/box1.jpg" alt="" class="box-img">
+      <div class="box">
+        <img src="./img/box1.jpg" alt="" class="box-img" />
 
-    <h3>Lorem ipsum dolor sit amet.</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, dolorum.</p>
-</div>
-<div class="box">
-        <img src="./img/box2.jpg" alt="" class="box-img">
-    <h3>Lorem ipsum dolor sit amet.</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, vitae?</p>
-</div>
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio,
+          dolorum.
+        </p>
+      </div>
+      <div class="box">
+        <img src="./img/box2.jpg" alt="" class="box-img" />
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, vitae?
+        </p>
+      </div>
 
-<div class="box">
-    <img src="./img/box3.jpg" alt="" class="box-img">
-<h3>Lorem ipsum dolor sit amet.</h3>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora, eum.</p>
-</div>
-
-
+      <div class="box">
+        <img src="./img/box3.jpg" alt="" class="box-img" />
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora,
+          eum.
+        </p>
+      </div>
     </div>
 
-    
-</body>
+    <footer>
+      <p class="copy">&copy; 2024 Adel Lamloum adel.lamloum@gmail.com</p>
+    </footer>
+  </body>
 </html>
